--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     //Image Picker/Crop
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation "androidx.activity:activity-ktx:1.2.3"
+    implementation("com.android.volley:volley:1.2.1")
     //..
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
