--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     implementation("com.android.volley:volley:1.2.1")
     //..
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.github.gayanvoice:android-animations-kotlin:1.0.1'
 
 }
