--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,25 +3,27 @@
     package="com.example.onlinemarketserviceprovider">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <application
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
-        android:usesCleartextTraffic="true"
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OnlineMarketServiceProvider">
-        <activity android:name=".Products.CreateProduct"></activity>
+        android:theme="@style/Theme.OnlineMarketServiceProvider"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Products.CreateProduct" />
         <activity android:name=".Shop.ShopInformation" />
         <activity android:name=".Auth.login" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".Auth.register" />
         <activity
-            android:name=".Auth.register"
-            android:exported="true">
+            android:name=".Start"
+            android:exported="true"
+            >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
