=Profile and product Update Has completed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,6 @@ dependencies {
     //..
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.gayanvoice:android-animations-kotlin:1.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
