--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,16 +42,19 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'ir.farshid_roohi:linegraph:0.1.1'
+//    implementation 'ir.farshid_roohi:linegraph:0.1.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     //Image Picker/Crop
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation "androidx.activity:activity-ktx:1.2.3"
     implementation("com.android.volley:volley:1.2.1")
+    implementation 'androidx.cardview:cardview:1.0.0'
     //..
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.gayanvoice:android-animations-kotlin:1.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //For to display Gif image
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
 }
